# ExtendScripExtension

./: .gitignore  CMakeLists.txt  README.md  build.ps1
inc/: ExtendScripExtension.h  export.h
inc/func/: basic.h  clamp.hpp  colorPicker.h  runExtendScript.h
res/: ExtendScripExtension.r  resource.h
src/: ExtendScripExtension.cpp
src/export/: colorPicker.cpp
src/func/: runExtendScript.cpp
ts/: index.d.ts
